fix mobile overflow issue in header

--- a/src/documents/styles/header.css.less
+++ b/src/documents/styles/header.css.less
@@ -1,3 +1,6 @@
 #headerwrap .svg path, #headerwrap .svg rect, #headerwrap .svg polygon {
 	fill: white;
 }
+#headerwrap svg {
+	width: 100%;
+}
